# peridot

./: .prettierignore  .prettierrc.json  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  TypstWorkerClient.ts  compiler.worker.ts  globals.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/components/: CommandPalette.tsx  FileExplorerView.tsx  VaultDialog.tsx
src/components/VaultView/: FileExplorerView.tsx  TypstCanvas.tsx  VaultSettingsDialog.tsx  index.tsx
src/components/ui/: accordion.tsx  dialog.tsx
src/stores/: rootConfigStore.ts  vaultSettingsStore.ts  vaultStore.ts
